# Hierarchos

./: ARCHITECTURE_AUDIT.md  EPOCH13_CHECKPOINT_AUDIT.md  HIERARCHOS_FINDINGS_PAPER.md  PYTHON_FIX.md  README.md  README_ZLUDA.md  analyze_config.py  benchmark_cpu_compile.py  benchmark_dataset_streaming.py  benchmark_full_sample_bptt.py  benchmark_training_pipeline.py  check_config.py  compare_arch.py  core_requirements.txt  dataset_chunk_create.py  diagnose_params.py  dummy.jsonl  dummy_data.jsonl  dummy_train.jsonl  expand_model.py  find_layer_diff.py  find_python_lib.py  hierarchos.py  hierarchos_ZLUDA.bat  hierarchos_ZLUDA.sh  hierarchos_bridge_server.py  hierarchos_cli.py  hierarchos_stable_snippet.py  inspect_ckpt.py  install_python.ps1  install_python_310.ps1  install_zluda.ps1  log.txt  log_verify.txt  log_verify_2.txt  repro_coherence.py  repro_drift_discrepancy.py  repro_l_state_grad.py  repro_l_state_grad_isolated.py  repro_ltm.py  (+53 more)
benchmark_results/: training_pipeline_compact_cpu_final.json  training_pipeline_compact_workers2_cpu.json  training_pipeline_cpu_final.json
checkpoint_audits/: epoch13-control.json
hierarchos/: __init__.py
hierarchos-gui/: Cargo.toml
hierarchos-gui/src/: app.rs  bridge.rs  embedded.rs  main.rs  theme.rs
hierarchos-gui/src/panels/: chat.rs  hub.rs  memory.rs  settings.rs  training.rs
hierarchos-gui/src/widgets/: heatmap.rs
src/: bridge.rs
tools/: HierarchosStandaloneLauncher.cs  audit_checkpoint_health.py  build_windows_release.ps1  check_architecture_integrity.py  hierarchos_backend.spec  hierarchos_backend_onefile.spec  (+9 more)
(+32 files in other folders)
